Implemented linegraph functionality
Temperature data is fetched from database and is displayed on linegraph
using the canvasjs library

--- a/src/components/Analytics/Infometrics.css
+++ b/src/components/Analytics/Infometrics.css
@@ -1,5 +1,18 @@
 .infometric_graph_row {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 40px;
+    margin-bottom: 50px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid lightgray;
   }
+
+.infometrics {
+  display: flex;
+  flex-direction: column;
+}
+
+.linegraph__row {
+  display: flex;
+  flex-direction: row;
+}
